# libTAS

./: .gitignore  CMakeLists.txt  build.sh  rebuild.sh
src/program/: CMakeLists.txt  Config.h  GameEvents.cpp  GameEventsXcb.cpp  GameLoop.cpp  GameLoop.h  GameThread.cpp  KeyMapping.cpp  KeyMapping.h  KeyMappingQuartz.mm  KeyMappingXcb.cpp  Makefile.am  SaveState.cpp  SaveStateList.cpp  reconnecter.cpp  starter.cpp
src/program/lua/: Gui.cpp  Input.cpp
src/program/movie/: InputSerialization.cpp  InputSerialization.h  MovieActionEditFrames.h  MovieActionInsertFrames.h  MovieActionPaint.h  MovieActionRemoveFrames.h  MovieFile.cpp  MovieFileChangeLog.cpp  MovieFileChangeLog.h  MovieFileEditor.cpp  MovieFileEditor.h  MovieFileHeader.cpp  MovieFileInputs.cpp  MovieFileInputs.h
src/program/ui/: ComboBoxItemDelegate.cpp  ControllerTabWindow.cpp  ControllerTabWindow.h  GameInfoWindow.h  InputEditorModel.cpp  InputEditorModel.h  InputEventModel.h  InputEventWindow.cpp  MainWindow.cpp  MainWindow.h  MovieSettingsWindow.cpp
src/shared/: message_x.h  messages.cpp  messages.h  sockethelpers.cpp  sockethelpers.h
src/shared/inputs/: AllInputs.cpp  AllInputsFlat.cpp
