add_executable(libTAS_program
        GameEvents.h
        GameLoop.h
        movie/MovieFileChangeLog.h
        movie/MovieFileInputs.h
        lua/Print.h
        ramsearch/IOProcessDevice.h
        ramsearch/MemScanner.h
        ui/AnnotationsWindow.h
        ui/ComboBoxItemDelegate.h
        ui/ControllerAxisWidget.h
        ui/ControllerTabWindow.h
        ui/ControllerWidget.h
        ui/EncodeWindow.h
        ui/ExecutableWindow.h
        ui/GameInfoWindow.h
		ui/HexDelegate.h
        ui/HexViewWindow.h
        ui/InputChangeLogModel.h
        ui/InputChangeLogWindow.h
        ui/InputEditorModel.h
        ui/InputEditorView.h
        ui/InputEditorWindow.h
        ui/InputEventModel.h
        ui/InputEventWindow.h
        ui/InputWindow.h
        ui/KeyPressedDialog.h
        ui/LuaConsoleWindow.h
        ui/LuaConsoleModel.h
        ui/MainWindow.h
        ui/MarkerModel.h
        ui/MarkerView.h
        ui/MovieSettingsWindow.h
        ui/PointerScanModel.h
        ui/PointerScanWindow.h
        ui/RamSearchModel.h
        ui/RamSearchWindow.h
        ui/RamWatchEditWindow.h
        ui/RamWatchModel.h
        ui/RamWatchView.h
        ui/RamWatchWindow.h
        ui/TimeTraceModel.h
        ui/TimeTraceWindow.h
        ui/settings/RuntimePane.h
        ui/settings/AudioPane.h
        ui/settings/InputPane.h
        ui/settings/MoviePane.h
        ui/settings/VideoPane.h
        ui/settings/DebugPane.h
        ui/settings/GameSpecificPane.h
        ui/settings/PathPane.h
        ui/settings/SettingsWindow.h
        ui/settings/tooltip/BalloonTip.h
        ../external/qhexview/include/QHexView/model/buffer/qdevicebuffer.h
        ../external/qhexview/include/QHexView/model/buffer/qhexbuffer.h
        ../external/qhexview/include/QHexView/model/buffer/qmappedfilebuffer.h
        ../external/qhexview/include/QHexView/model/buffer/qmemorybuffer.h
        ../external/qhexview/include/QHexView/model/buffer/qmemoryrefbuffer.h
        ../external/qhexview/include/QHexView/model/commands/hexcommand.h
        ../external/qhexview/include/QHexView/model/commands/insertcommand.h
        ../external/qhexview/include/QHexView/model/commands/removecommand.h
        ../external/qhexview/include/QHexView/model/commands/replacecommand.h
        ../external/qhexview/include/QHexView/model/commands/replacecommand.h
        ../external/qhexview/include/QHexView/model/qhexcursor.h
        ../external/qhexview/include/QHexView/model/qhexdelegate.h
        ../external/qhexview/include/QHexView/model/qhexdocument.h
        ../external/qhexview/include/QHexView/model/qhexmetadata.h
        ../external/qhexview/include/QHexView/model/qhexoptions.h
        ../external/qhexview/include/QHexView/model/qhexutils.h
        ../external/qhexview/include/QHexView/qhexview.h

        AutoDetect.cpp
        AutoSave.cpp
        Config.cpp
        GameEvents.cpp
        GameEventsXcb.cpp
        GameLoop.cpp
        GameThread.cpp
        KeyMapping.cpp
        KeyMappingXcb.cpp
        main.cpp
        SaveState.cpp
        SaveStateList.cpp
        utils.cpp
        lua/Callbacks.cpp
        lua/Gui.cpp
        lua/LuaFunctionList.cpp
        lua/NamedLuaFunction.cpp
        lua/Input.cpp
        lua/Main.cpp
        lua/Memory.cpp
        lua/Movie.cpp
        lua/Print.cpp
        lua/Runtime.cpp
        movie/InputSerialization.cpp
        movie/MovieActionEditFrames.cpp
        movie/MovieActionInsertFrames.cpp
        movie/MovieActionPaint.cpp
        movie/MovieActionRemoveFrames.cpp
        movie/MovieFile.cpp
        movie/MovieFileAnnotations.cpp
        movie/MovieFileChangeLog.cpp
        movie/MovieFileEditor.cpp
        movie/MovieFileHeader.cpp
        movie/MovieFileInputs.cpp
		ui/AnalogInputsModel.cpp
		ui/AnalogInputsWindow.cpp
        ui/AnnotationsWindow.cpp
        ui/ComboBoxItemDelegate.cpp
        ui/ControllerAxisWidget.cpp
        ui/ControllerTabWindow.cpp
        ui/ControllerWidget.cpp
        ui/EncodeWindow.cpp
        ui/ErrorChecking.cpp
        ui/ExecutableWindow.cpp
        ui/GameInfoWindow.cpp
		ui/HexDelegate.cpp
        ui/HexViewWindow.cpp
        ui/InputChangeLogModel.cpp
        ui/InputChangeLogWindow.cpp
        ui/InputEditorModel.cpp
        ui/InputEditorView.cpp
        ui/InputEditorWindow.cpp
        ui/InputEventModel.cpp
        ui/InputEventWindow.cpp
        ui/InputWindow.cpp
        ui/KeyPressedDialog.cpp
        ui/LuaConsoleWindow.cpp
        ui/LuaConsoleModel.cpp
        ui/MainWindow.cpp
        ui/MarkerModel.cpp
        ui/MarkerView.cpp
        ui/MovieSettingsWindow.cpp
        ui/PointerScanModel.cpp
        ui/PointerScanWindow.cpp
        ui/RamSearchModel.cpp
        ui/RamSearchWindow.cpp
        ui/RamWatchEditWindow.cpp
        ui/RamWatchModel.cpp
        ui/RamWatchView.cpp
        ui/RamWatchWindow.cpp
        ui/TimeTraceModel.cpp
        ui/TimeTraceWindow.cpp
        ui/qtutils.cpp
        ui/settings/RuntimePane.cpp
        ui/settings/AudioPane.cpp
        ui/settings/InputPane.cpp
        ui/settings/MoviePane.cpp
        ui/settings/VideoPane.cpp
        ui/settings/DebugPane.cpp
        ui/settings/GameSpecificPane.cpp
        ui/settings/PathPane.cpp
        ui/settings/SettingsWindow.cpp
        ui/settings/WrapInScrollArea.cpp
        ui/settings/tooltip/BalloonTip.cpp
        ui/settings/tooltip/ToolTipCheckBox.cpp
        ui/settings/tooltip/ToolTipComboBox.cpp
        ui/settings/tooltip/ToolTipGroupBox.cpp
        ui/settings/tooltip/ToolTipRadioButton.cpp
        ui/settings/tooltip/ToolTipSlider.cpp
        ui/settings/tooltip/ToolTipSpinBox.cpp
        ramsearch/BaseAddresses.cpp
        ramsearch/CompareOperations.cpp
        ramsearch/IOProcessDevice.cpp
        ramsearch/RamWatchDetailed.cpp
        ramsearch/MemAccess.cpp
        ramsearch/MemLayout.cpp
        ramsearch/MemScanner.cpp
        ramsearch/MemScannerThread.cpp
        ramsearch/MemSection.cpp
        ramsearch/MemValue.cpp
        ../shared/inputs/AllInputs.cpp
        ../shared/inputs/ControllerInputs.cpp
        ../shared/inputs/MiscInputs.cpp
        ../shared/inputs/MouseInputs.cpp
        ../shared/inputs/SingleInput.cpp
        ../shared/sockethelpers.cpp
        ../external/qhexview/src/model/commands/hexcommand.cpp
        ../external/qhexview/src/model/commands/insertcommand.cpp
        ../external/qhexview/src/model/commands/removecommand.cpp
        ../external/qhexview/src/model/commands/replacecommand.cpp
        ../external/qhexview/src/model/buffer/qdevicebuffer.cpp
        ../external/qhexview/src/model/buffer/qhexbuffer.cpp
        ../external/qhexview/src/model/buffer/qmemorybuffer.cpp
        ../external/qhexview/src/model/buffer/qmemoryrefbuffer.cpp
        ../external/qhexview/src/model/buffer/qmappedfilebuffer.cpp
        ../external/qhexview/src/model/qhexdelegate.cpp
        ../external/qhexview/src/model/qhexutils.cpp
        ../external/qhexview/src/model/qhexcursor.cpp
        ../external/qhexview/src/model/qhexmetadata.cpp
        ../external/qhexview/src/model/qhexdocument.cpp
        ../external/qhexview/src/qhexview.cpp
)

add_dependencies(libTAS_program libTAS)

find_package(Qt5 COMPONENTS Core Widgets Gui REQUIRED)


set_target_properties(libTAS_program PROPERTIES OUTPUT_NAME libTAS)
set_target_properties(libTAS_program PROPERTIES AUTOMOC ON)

execute_process(COMMAND git log -1 --format=%h OUTPUT_VARIABLE GIT_COMMIT_HASH OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND git log -1 --format=%as OUTPUT_VARIABLE GIT_COMMIT_DATE OUTPUT_STRIP_TRAILING_WHITESPACE)

target_compile_definitions(libTAS_program PUBLIC LIBTAS_INTERIM_COMMIT="${GIT_COMMIT_HASH}")
target_compile_definitions(libTAS_program PUBLIC LIBTAS_INTERIM_DATE="${GIT_COMMIT_DATE}")
target_compile_options(libTAS PRIVATE "-fno-stack-protector" "-Wno-float-equal")
target_link_libraries(libTAS_program PRIVATE
        Qt5::Core Qt5::Widgets Qt5::Gui
        PkgConfig::X11
        PkgConfig::XCB
        PkgConfig::XCB_XKB
        PkgConfig::XCB_KEYSYMS
		# PkgConfig::XCB_XINPUT
        PkgConfig::LIBCAP
        PkgConfig::LUA
)

target_include_directories(libTAS_program PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_SOURCE_DIR}/src/external/qhexview/include
)
