add_executable(libTAS_program
        ../external/qhexview/include/QHexView/model/buffer/qdevicebuffer.h
        ../external/qhexview/include/QHexView/model/buffer/qhexbuffer.h
        ../external/qhexview/include/QHexView/model/buffer/qmappedfilebuffer.h
        ../external/qhexview/include/QHexView/model/buffer/qmemorybuffer.h
        ../external/qhexview/include/QHexView/model/buffer/qmemoryrefbuffer.h
        ../external/qhexview/include/QHexView/model/commands/hexcommand.h
        ../external/qhexview/include/QHexView/model/commands/insertcommand.h
        ../external/qhexview/include/QHexView/model/commands/removecommand.h
        ../external/qhexview/include/QHexView/model/commands/replacecommand.h
        ../external/qhexview/include/QHexView/model/commands/replacecommand.h
        ../external/qhexview/include/QHexView/model/qhexcursor.h
        ../external/qhexview/include/QHexView/model/qhexdelegate.h
        ../external/qhexview/include/QHexView/model/qhexdocument.h
        ../external/qhexview/include/QHexView/model/qhexmetadata.h
        ../external/qhexview/include/QHexView/model/qhexoptions.h
        ../external/qhexview/include/QHexView/model/qhexutils.h
        ../external/qhexview/include/QHexView/qhexview.h
        ../external/qhexview/src/model/buffer/qdevicebuffer.cpp
        ../external/qhexview/src/model/buffer/qhexbuffer.cpp
        ../external/qhexview/src/model/buffer/qmappedfilebuffer.cpp
        ../external/qhexview/src/model/buffer/qmemorybuffer.cpp
        ../external/qhexview/src/model/buffer/qmemoryrefbuffer.cpp
        ../external/qhexview/src/model/commands/hexcommand.cpp
        ../external/qhexview/src/model/commands/insertcommand.cpp
        ../external/qhexview/src/model/commands/removecommand.cpp
        ../external/qhexview/src/model/commands/replacecommand.cpp
        ../external/qhexview/src/model/qhexcursor.cpp
        ../external/qhexview/src/model/qhexdelegate.cpp
        ../external/qhexview/src/model/qhexdocument.cpp
        ../external/qhexview/src/model/qhexmetadata.cpp
        ../external/qhexview/src/model/qhexutils.cpp
        ../external/qhexview/src/qhexview.cpp
        ../shared/inputs/AllInputs.cpp
        ../shared/inputs/ControllerInputs.cpp
        ../shared/inputs/MiscInputs.cpp
        ../shared/inputs/MouseInputs.cpp
        ../shared/inputs/SingleInput.cpp
        ../shared/sockethelpers.cpp
        AutoDetect.cpp
        AutoSave.cpp
        Config.cpp
        GameEvents.cpp
        GameEvents.h
        GameEventsXcb.cpp
        GameLoop.cpp
        GameLoop.h
        GameThread.cpp
        KeyMapping.cpp
        KeyMappingXcb.cpp
        SaveState.cpp
        SaveStateList.cpp
        Signature.cpp
        UnityPatching.cpp
        lua/Callbacks.cpp
        lua/Gui.cpp
        lua/Input.cpp
        lua/LuaFunctionList.cpp
        lua/Main.cpp
        lua/Memory.cpp
        lua/Movie.cpp
        lua/NamedLuaFunction.cpp
        lua/Print.cpp
        lua/Print.h
        lua/Runtime.cpp
        main.cpp
        movie/InputSerialization.cpp
        movie/MovieActionEditFrames.cpp
        movie/MovieActionInsertFrames.cpp
        movie/MovieActionPaint.cpp
        movie/MovieActionRemoveFrames.cpp
        movie/MovieFile.cpp
        movie/MovieFileAnnotations.cpp
        movie/MovieFileChangeLog.cpp
        movie/MovieFileChangeLog.h
        movie/MovieFileEditor.cpp
        movie/MovieFileHeader.cpp
        movie/MovieFileInputs.cpp
        movie/MovieFileInputs.h
        ramsearch/BaseAddresses.cpp
        ramsearch/CompareOperations.cpp
        ramsearch/IOProcessDevice.cpp
        ramsearch/IOProcessDevice.h
        ramsearch/MemAccess.cpp
        ramsearch/MemLayout.cpp
        ramsearch/MemScanner.cpp
        ramsearch/MemScanner.h
        ramsearch/MemScannerThread.cpp
        ramsearch/MemSection.cpp
        ramsearch/MemValue.cpp
        ramsearch/RamWatchDetailed.cpp
        ui/AnalogInputsModel.cpp
        ui/AnalogInputsWindow.cpp
        ui/AnnotationsWindow.cpp
        ui/AnnotationsWindow.h
        ui/ComboBoxItemDelegate.cpp
        ui/ComboBoxItemDelegate.h
        ui/ControllerAxisWidget.cpp
        ui/ControllerAxisWidget.h
        ui/ControllerTabWindow.cpp
        ui/ControllerTabWindow.h
        ui/ControllerWidget.cpp
        ui/ControllerWidget.h
        ui/EncodeWindow.cpp
        ui/EncodeWindow.h
        ui/ErrorChecking.cpp
        ui/ExecutableWindow.cpp
        ui/ExecutableWindow.h
        ui/GameInfoWindow.cpp
        ui/GameInfoWindow.h
        ui/HexDelegate.cpp
        ui/HexDelegate.h
        ui/HexViewWindow.cpp
        ui/HexViewWindow.h
        ui/InputChangeLogModel.cpp
        ui/InputChangeLogModel.h
        ui/InputChangeLogWindow.cpp
        ui/InputChangeLogWindow.h
        ui/InputEditorModel.cpp
        ui/InputEditorModel.h
        ui/InputEditorView.cpp
        ui/InputEditorView.h
        ui/InputEditorWindow.cpp
        ui/InputEditorWindow.h
        ui/InputEventModel.cpp
        ui/InputEventModel.h
        ui/InputEventWindow.cpp
        ui/InputEventWindow.h
        ui/InputWindow.cpp
        ui/InputWindow.h
        ui/KeyPressedDialog.cpp
        ui/KeyPressedDialog.h
        ui/LuaConsoleModel.cpp
        ui/LuaConsoleModel.h
        ui/LuaConsoleWindow.cpp
        ui/LuaConsoleWindow.h
        ui/MainWindow.cpp
        ui/MainWindow.h
        ui/MarkerModel.cpp
        ui/MarkerModel.h
        ui/MarkerView.cpp
        ui/MarkerView.h
        ui/MovieSettingsWindow.cpp
        ui/MovieSettingsWindow.h
        ui/PointerScanModel.cpp
        ui/PointerScanModel.h
        ui/PointerScanWindow.cpp
        ui/PointerScanWindow.h
        ui/RamSearchModel.cpp
        ui/RamSearchModel.h
        ui/RamSearchWindow.cpp
        ui/RamSearchWindow.h
        ui/RamWatchEditWindow.cpp
        ui/RamWatchEditWindow.h
        ui/RamWatchModel.cpp
        ui/RamWatchModel.h
        ui/RamWatchView.cpp
        ui/RamWatchView.h
        ui/RamWatchWindow.cpp
        ui/RamWatchWindow.h
        ui/TimeTraceModel.cpp
        ui/TimeTraceModel.h
        ui/TimeTraceWindow.cpp
        ui/TimeTraceWindow.h
        ui/qtutils.cpp
        ui/settings/AudioPane.cpp
        ui/settings/AudioPane.h
        ui/settings/DebugPane.cpp
        ui/settings/DebugPane.h
        ui/settings/GameSpecificPane.cpp
        ui/settings/GameSpecificPane.h
        ui/settings/InputPane.cpp
        ui/settings/InputPane.h
        ui/settings/MoviePane.cpp
        ui/settings/MoviePane.h
        ui/settings/PathPane.cpp
        ui/settings/PathPane.h
        ui/settings/RuntimePane.cpp
        ui/settings/RuntimePane.h
        ui/settings/SettingsWindow.cpp
        ui/settings/SettingsWindow.h
        ui/settings/VideoPane.cpp
        ui/settings/VideoPane.h
        ui/settings/WrapInScrollArea.cpp
        ui/settings/tooltip/BalloonTip.cpp
        ui/settings/tooltip/BalloonTip.h
        ui/settings/tooltip/ToolTipCheckBox.cpp
        ui/settings/tooltip/ToolTipComboBox.cpp
        ui/settings/tooltip/ToolTipGroupBox.cpp
        ui/settings/tooltip/ToolTipRadioButton.cpp
        ui/settings/tooltip/ToolTipSlider.cpp
        ui/settings/tooltip/ToolTipSpinBox.cpp
        utils.cpp
)

add_dependencies(libTAS_program libTAS)

set_target_properties(libTAS_program PROPERTIES OUTPUT_NAME libTAS)
set_target_properties(libTAS_program PROPERTIES AUTOMOC ON)

execute_process(COMMAND git log -1 --format=%h OUTPUT_VARIABLE GIT_COMMIT_HASH OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND git log -1 --format=%as OUTPUT_VARIABLE GIT_COMMIT_DATE OUTPUT_STRIP_TRAILING_WHITESPACE)

find_package(Qt5 COMPONENTS Core Widgets Gui REQUIRED)

target_compile_definitions(libTAS_program PUBLIC LIBTAS_INTERIM_COMMIT="${GIT_COMMIT_HASH}")
target_compile_definitions(libTAS_program PUBLIC LIBTAS_INTERIM_DATE="${GIT_COMMIT_DATE}")
target_compile_options(libTAS PRIVATE "-fno-stack-protector" "-Wno-float-equal")
target_link_libraries(libTAS_program PRIVATE
        Qt5::Core Qt5::Widgets Qt5::Gui
        PkgConfig::X11
        PkgConfig::XCB
        PkgConfig::XCB_XKB
        PkgConfig::XCB_KEYSYMS
        PkgConfig::LIBCAP
        PkgConfig::LUA
)

target_include_directories(libTAS_program PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_SOURCE_DIR}/src/external/qhexview/include
)
